# abi-sauce

./: .gitignore  README.md  _file_manager.py  _trace_visualizer.py  app.py  environment.yml  main.py  pyproject.toml  requirements.txt  streamlit-sanger-sequence-trim.py
.dev/: 3_💧_dilution-calculator.py  4_🔥_tm-calc.py  _calc_ta.py  main.py
abi_sauce/: alignment_policy.py  alignment_state.py  assembly.py  assembly_exports.py  assembly_multi.py  assembly_pairwise.py  assembly_presenters.py  assembly_state.py  assembly_trace.py  assembly_trace_figure.py  assembly_types.py  batch.py  batch_download_ui.py  chromatogram.py  chromatogram_figure.py  demo_batch.py  exceptions.py  export.py  models.py  orientation.py  oriented_reads.py  reference_alignment.py  reference_alignment_exports.py  reference_alignment_multi.py  reference_alignment_multi_exports.py  reference_alignment_multi_presenters.py  reference_alignment_multi_trace.py  reference_alignment_multi_trace_figure.py  reference_alignment_presenters.py  reference_alignment_trace.py  reference_alignment_trace_figure.py  reference_alignment_types.py  reference_library_state.py  signal_sampling.py  streamlit_cache.py  trace_coordinates.py  trim_state.py  trimming.py  upload_state.py  viewer_state.py
pages/: 00_home.py  00_upload_and_parse.py  01_chromatogram_preview.py  02_reference_alignment.py  03_assembly.py  04_alignments.py  1_sanger-trim.py  1_✂️_sanger-trim.py  1_📂_file-manager.py  2_✂️_sanger-trim.py  2_🌈_fla-viewer.py  2_🔍_trace-viewer.py  3_✂️_sanger-trim.py  3_🌈_fla-viewer-advanced.py  3_🔥_tm-calc.py  (+4 more)
(+96 files in other folders)
